--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,31 @@
-<h1>Articles listing page:</h1>
+<h1 class="text-center mt-4 ">Listing all articles</h1>
+
+<% @articles.each do |article| %>
+  <div class="container" id="article-card"> 
+    <div class="card text-center shadow-lg mb-5 bg-body rounded"> 
+      <div class="card-header fst-italic darker-background" >
+          by Mashur Hossain
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">
+            <%= link_to article.title, article_path(article), class: "text-success" %>
+          </h5>
+          <p class="card-text">
+            <%= truncate(article.description, length: 100) %>
+          </p>
+          <%= link_to 'View', article_path(article), class: "btn btn-outline-success" %>
+          <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %>
+          <%= link_to 'Delete', article_path(article), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" },class:"btn btn-outline-danger" %>
+        </div>
+        <div class="card-footer text-muted darker-background">
+          <small>Created <%= time_ago_in_words(article.created_at) %> ago,
+          edited <%= time_ago_in_words(article.updated_at) %> ago</small>
+      </div>
+    </div>
+  </div>
+<% end %>
+
+
 <table>
     <thead>
         <tr>
