Clean up layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <body class="d-flex flex-column">
     <div id="page-content">
       <%= render 'layouts/navigation_bar' %>
+      <%= render 'layouts/messages' %>
       <%= yield %>
     </div>
     <%= render 'layouts/footer' %>
