--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,9 +10,9 @@
           <h5 class="card-title">
             <%= link_to article.title, article_path(article), class: "text-success" %>
           </h5>
-          <p class="card-text">
-            <%= truncate(article.description, length: 100) %>
-          </p>
+          <div class="card-text text-start">
+            <%= simple_format(truncate(article.description, length: 100)) %>
+          </div>
           <%= link_to 'View', article_path(article), class: "btn btn-outline-success" %>
           <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-info" %>
           <%= link_to 'Delete', article_path(article), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" },class:"btn btn-outline-danger" %>
