Added name assocation with user in articles

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
   <div class="container" id="article-card"> 
     <div class="card text-center shadow-lg mb-5 bg-body rounded"> 
       <div class="card-header fst-italic darker-background" >
-          by Mashur Hossain
+        <%= article.user.username %>
         </div>
         <div class="card-body">
           <h5 class="card-title">
