--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
 <div class="container" id="article-card"> 
     <div class="card text-center shadow-lg mb-5 bg-body rounded"> 
       <div class="card-header fst-italic darker-background" >
-          by Mashur Hossain
+          <%= @article.user.username %>
         </div>
         <div class="card-body">
           <div class="card-text text-start">
