--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -2,7 +2,7 @@
   <div class="container" id="article-card"> 
     <div class="card text-center shadow-lg mb-5 bg-body rounded"> 
       <div class="card-header fst-italic darker-background" >
-        by <%= article.user.username %>
+        by <%= link_to article.user.username, user_path(article.user) %>
         </div>
         <div class="card-body">
           <h5 class="card-title">
