--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,6 +4,7 @@
     <div class="card text-center shadow-lg mb-5 bg-body rounded"> 
       <div class="card-header fst-italic darker-background" >
           <%= @article.user.username %>
+          <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
         </div>
         <div class="card-body">
           <div class="card-text text-start">
