--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,9 @@
 <h1 class="text-center mt-4 ">Alpha Bloggers</h1>
 
+<div class="apple_pagination mt-4">
+    <%= will_paginate @users, :container => false %>
+</div>
+
 <% @users.each do |user| %>
   <div class="container" id="article-card"> 
     <div class="card text-center shadow-lg mb-5 bg-body rounded"> 
@@ -22,3 +26,7 @@
     </div>
   </div>
 <% end %>
+
+<div class="apple_pagination mb-4">
+    <%= will_paginate @users, :container => false %>
+</div>
