--- a/app/views/layouts/_navigation_bar.html.erb
+++ b/app/views/layouts/_navigation_bar.html.erb
@@ -19,6 +19,12 @@
             <li><%= link_to "View articles", articles_path, class: "dropdown-item" %></li>
           </ul>
         </li>
+        <li>
+          <%= link_to "Log in", login_path, class: "nav-link" %> 
+        </li>
+        <li>
+          <%= link_to "Log out", logout_path, class: "nav-link", data: { turbo_method: :delete }%> 
+        </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
